# aphelios_cli

./: .gitignore  Cargo.toml  aaa.txt  analyze_funasr.py  bbb.txt  build.rs  build_release.sh  metadata.db  readme.md
.zed/: settings.json
aphelios_all/: Cargo.toml
aphelios_all/src/: commands.rs  lib.rs  main.rs
aphelios_all/src/commands/: minersu.rs  qwen_llm.rs  qwenvl.rs  utils.rs
aphelios_all/src/dolphin/: mod.rs  model.rs  utils.rs
aphelios_all/src/engine/: mod.rs
aphelios_all/tests/: cli_test.rs  dolphin_test.rs  mineru_test.rs  pdf_test.rs  qwen3_tts_test.rs  qwen_llm_test.rs  search_test.rs  tensor_search_test.rs
aphelios_asr/: Cargo.toml
aphelios_asr/examples/: parakeet_example.rs
aphelios_asr/src/: lib.rs  qwenasr.rs  sensevoice.rs  silerovad.rs  text_match.rs  whisper.rs
aphelios_asr/src/base/: mod.rs  qwen3llm.rs
aphelios_asr/src/dia/: mod.rs
aphelios_asr/src/fireredvad/: mod.rs  vad_postprocessor.rs
aphelios_asr/src/funasr/: audio_adaptor.rs  audio_encoder.rs  frontend.rs  llm.rs  mod.rs  pipeline.rs
aphelios_asr/src/granite/: llm.rs  mod.rs
aphelios_asr/src/qwen3llm/: llm.rs  mod.rs
aphelios_asr/src/qwenasr/: aligner.rs  audio.rs  decoder.rs  encoder.rs  mod.rs  model.rs  preset.rs  tokenizer.rs  transcribe.rs
aphelios_asr/src/sensevoice/: audio.rs  mod.rs  sensevoice.rs  tokenizer.rs  vad.rs
aphelios_asr/src/silerovad/: detector.rs  engine.rs  mod.rs  types.rs  vadprocess.rs
aphelios_asr/src/vad/: detector.rs
aphelios_asr/src/whisper/: melfilters.rs  mod.rs
aphelios_asr/tests/: dia_test.rs  firered_vad_test.rs  funasr_test.rs  granite.rs  granite_test.rs  parakeet_asr_test.rs  qwen3asr_test.rs  qwen3llm_test.rs  sensevoice_test.rs  silero_vad_test.rs  test_match_test.rs  whisper_candle_test.rs  whisper_ggml_test.rs
aphelios_core/: Cargo.toml
aphelios_core/examples/: sam_example.rs  texify2_onnx.rs  yt_dlp_download.rs
aphelios_core/src/: demucs.rs  lib.rs  srt_translator.rs  traits.rs  utils.rs  yt_dlp_downloader.rs
aphelios_core/src/asr/: mod.rs
aphelios_core/src/audio/: loader.rs  mod.rs  resampler.rs  saver.rs  types.rs
aphelios_core/src/common/: core_utils.rs  mod.rs
aphelios_core/src/demucs/: constants.rs  fft.rs  mod.rs  processor.rs  tests.rs
aphelios_core/templates/: translategemma-4b-it.jinja
aphelios_core/tests/: asr_test.rs  demucs_integration_test.rs  demucs_test.rs  dia_test.rs  epub_test.rs  jina_test.rs  openai_test.rs  profiling_test.rs  rtdetr_test.rs  srt_translator_test.rs  texify2_onnx_test.rs  tracing_rest.rs  tracing_test.rs  tts_test.rs  vad_asr_test.rs  vad_test.rs  workspace_meta_test.rs  yt_dlp_test.rs
aphelios_device/: Cargo.toml
aphelios_device/examples/: camera_example.rs  camera_v2_example.rs  label_video_example.rs  label_video_fast.rs  label_video_rtdetr.rs  no_process_camera_example.rs  realtime_camera_example.rs  webrtc_example.rs
aphelios_device/static/: index.html
aphelios_mlx/: Cargo.toml
aphelios_mlx/examples/: llm_main.rs
aphelios_models/: Cargo.toml
aphelios_models/examples/: c1_1.rs  c2_1.rs  c3_1.rs  longcat_debug_dump.rs  longcat_prompt_dump.rs  longcat_text_dump.rs  vibevoice_realtime.rs
aphelios_models/src/: imglabel.rs  lib.rs
aphelios_models/src-python/: c3.py  tools.py
aphelios_models/tests/: dia_test.rs  epub_test.rs  firered_vad_test.rs  harrier_embed_test.rs  koko_tts_test.rs  longcat_alignment_test.rs  longcat_audio_test.rs  parakeet_asr_test.rs  search_integration_test.rs  vibevoice_example.rs
aphelios_ocr/: Cargo.toml  README.md  build.rs
aphelios_ocr/examples/: dolphin_ocr.rs  dolphin_onnx.rs  firered_ocr.rs
aphelios_ocr/src/: doc_layout.rs  dolphin.rs  glmocr.rs  lib.rs  main.rs
aphelios_ocr/tests/: dolphin_onnx_test.rs  dolphin_test.rs  glmocr_test.rs  paddleocr_test.rs  pdf_test.rs
aphelios_onnx/: Cargo.toml
aphelios_search/: Cargo.toml
aphelios_search/examples/: chromiumoxide_example.rs  chromiumoxide_simple.rs  harrier_embed_example.rs
aphelios_search/src/: chinese_norm.rs  harrier_embed.rs  lib.rs  semantic_search.rs
aphelios_search/tests/: build_index_test.rs  file_search.rs  jina_test.rs  search_test.rs  semantic_search_test.rs  usearch_test.rs
aphelios_slint/: Cargo.toml  build.rs
aphelios_slint/assets/: app_window.slint  asr_ui.slint  book_search_ui.slint  demucs_ui.slint  epub_reader_ui.slint  icon.icns  main_menu.slint  ocr_ui.slint  settings_ui.slint  text_align_ui.slint  tts_ui.slint
aphelios_slint/src/: config.rs  controllers.rs  lib.rs  logger.rs  main.rs  services.rs
aphelios_tool/: Cargo.toml
aphelios_tool/src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs  models.rs
aphelios_tool/tests/: async_stream_test.rs  cli_test.rs  mineru_test.rs  pdf_test.rs  processbar_test.rs  qwen_llm_test.rs  tensor_search_test.rs  tool_test.rs  usearch_test.rs
aphelios_tts/: Cargo.toml
aphelios_tts/examples/: OPTIMIZATION_METAL.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  README_STREAMING.md  README_STREAMING_CN.md  README_流式播放.md  STREAMING_FIX.md  check_device.rs  longcat_audiodit.rs  qwen3_tts.rs  qwen3_tts2.rs  qwen3_tts_optimized.rs  qwen3_tts_profile.rs  qwen3_tts_simple.rs  qwen3_tts_simple_cv.rs  qwen3_tts_streaming.rs  qwen3_tts_streaming_cv.rs  qwen3tts.rs  qwen3tts_streaming.rs  qwen3tts_streaming_cv.rs  test_audio_playback.rs  vibevoice_example.rs  vibevoice_realtime.rs
aphelios_tts/scripts/: infer_onnx.py  longcat_compare_batch.py  longcat_debug.py  longcat_prompt_audio.py  longcat_reference.py  longcat_rng.py  longcat_text_dump.py  moss_tts_nano.md  onnx_tts_runtime.py  ort_cpu_runtime.py
aphelios_tts/src/: cosyvoice3.rs  hub.rs  lib.rs
aphelios_tts/tests/: longcat_alignment_test.rs  moss_tts_nano_test.rs  qwen_tts_test.rs  supertonic3_test.rs  tts_test.rs
aphelios_ui/: Cargo.toml  build.rs
aphelios_ui/src/: main.rs
aphelios_wasm/: Cargo.toml  build-lib.sh  web.html
aphelios_wasm/src/: lib.rs
aphelios_web/: Cargo.toml  build.rs
aphelios_web/src/: lib.rs  main.rs
aphelios_web/src-web/: README.md  metadata.json  package-lock.json  package.json  vite.config.ts
(+181 files in other folders)
