[package]
name = "aphelios_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"

rand = "0.9"           # 生成随机数
indicatif = "0.17"     # 进度条
tokio = { version = "1", features = ["full"] }  # 异步 sleep
#ort = { version = "2.0.0-rc.11", features = [ "coreml" ] }
ndarray = "0.17.2"
tokenizers = "0.22.2"
image = "0.25.9"
imageproc = "0.26.0"

toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22" }
tracing-indicatif = "0.3.14"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

candle-core = { version = "0.9.2", features = ["metal"] }
candle-nn = { version = "0.9.2", features = ["metal"] }
candle-transformers = { version = "0.9.2" }
candle-examples = { version = "0.9.2" }

regex = "1.12.2"
mistralrs = {version = "0.7.0", features = ["metal"]}

reqwest = "0.13.1"
once_cell = "1.21.3"
epub = "2.1.5"

qwen_tts = { version = "0.1.1", features = ["metal", "accelerate", "audio-loading", "timing"] }
usearch = "2.23.0"
slint = "1.15.0"
fastembed = { version = "5.8.1", features = ["qwen3"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
glob = "0.3.3"
hayro = "0.5.0"
async-stream = "0.3.6"
futures-util = "0.3.31"
tracing-test = "0.2.6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[patch.crates-io]
qwen_tts = { git = "https://github.com/danielclough/qwen3-tts-rs", branch = "main" }
candle-core = { git = "https://github.com/tardigrade-dot/candle.git", branch = "main" }
candle-nn = { git = "https://github.com/tardigrade-dot/candle.git", branch = "main" }
candle-transformers = { git = "https://github.com/tardigrade-dot/candle.git", branch = "main" }
candle-examples = { git = "https://github.com/tardigrade-dot/candle.git", branch = "main" }
#candle-onnx = { git = "https://github.com/tardigrade-dot/candle.git", branch = "main" }
candle-metal-kernels = { git = "https://github.com/tardigrade-dot/candle.git", branch = "main" }


[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


[build]
rustc-wrapper = "sccache"

#[target.x86_64-apple-darwin]
#rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/bin/mold"]

[build-dependencies]
slint-build = "1.15.0"

[package.metadata.slint]
assets = ["assets/**"]
