[workspace]
# 1. 包含哪些子项目
members = [
    "aphelios_tool",
    "aphelios_ui",
    "aphelios_ocr",
    "aphelios_core", 
    "aphelios_search", 
    "aphelios_models", 
    #"aphelios_wasm", 
    "aphelios_onnx", "aphelios_tts",
]
resolver = "2"
# 2. 解决依赖版本冲突：在父项目统一管理依赖版本
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }  # 异步 sleep
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.15.0"

clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"

rand = "0.9"           # 生成随机数
indicatif = "0.18.4"     # 进度条

ort = { version = "2.0.0-rc.11", features = [ "ndarray" ] }
ndarray = "0.17.2"
tokenizers = { version = "0.22.0", default-features = false }
image = "0.25.9"
imageproc = "0.26.0"

toml = "0.9.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
tracing-indicatif = "0.3.14"

candle-core = { version = "0.9.2" }
candle-nn = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }

regex = "1.12.2"
#mistralrs = {version = "0.7.1-alpha.1" }

reqwest = "0.13.1"
once_cell = "1.21.3"
epub = "2.1.5"

qwen_tts = { version = "0.1.1", features = ["audio-loading", "timing", "progressbar"] }
usearch = "2.23.0"

fastembed = { version = "5.8.1", features = ["qwen3"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
glob = "0.3.3"
hayro = "0.5.0"
async-stream = "0.3.6"
futures-util = "0.3.32"
futures = "0.3.32"
tracing-test = "0.2.6"
imara-diff = "0.2.0"
jieba-rs = "0.8.1"
hf-hub = "0.4.3"
itertools = "0.14.0"
measureme = "12.0.3"
eyre = "0.6.12"
parakeet-rs = { version = "0.2", features = ["sortformer"] }
symphonia = "0.5.5"
byteorder = "1.5.0"
rubato = "0.16.2"
rustfft = "6.4.1"
num-complex = "0.4.6"

log = "0.4"
num-traits = "0.2.15"
safetensors = "0.7.0"
web-time = "=1.1.0"

# 3. 统一管理包信息（可选，Rust 1.64+ 支持）
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
license = "MIT"

[patch.crates-io]

qwen_tts = { git = "https://github.com/tardigrade-dot/qwen3-tts-rs", rev = "fad7cf6" }

candle-core = { git = "https://github.com/tardigrade-dot/candle.git", version = "0.9.2", rev = "468fe66" }
candle-nn = { git = "https://github.com/tardigrade-dot/candle.git", version = "0.9.2", rev = "468fe66" }
candle-transformers = { git = "https://github.com/tardigrade-dot/candle.git", version = "0.9.2", rev = "468fe66" }
candle-metal-kernels = { git = "https://github.com/tardigrade-dot/candle.git", version = "0.9.2", rev = "468fe66" }

#candle-examples = { git = "https://github.com/tardigrade-dot/candle.git", version = "0.9.2", rev = "468fe66" }
#candle-onnx = { git = "https://github.com/tardigrade-dot/candle.git", version = "0.9.2", rev = "468fe66" }

#mistralrs = {git = "https://github.com/EricLBuehler/mistral.rs", version = "0.7.1-alpha.1", rev = "2a10942" }

[profile.release]
opt-level = 3
debug = true
lto = "thin"

