[workspace]
# 1. 包含哪些子项目
members = [
    "aphelios_tool",
    "aphelios_slint",
    "aphelios_ocr",
    "aphelios_core",
    "aphelios_search",
    "aphelios_tts",
    "aphelios_asr",
    # "aphelios_models",
    #"aphelios_wasm", 
    # "aphelios_device",
    # "aphelios_web",
]
resolver = "2"
# 2. 解决依赖版本冲突：在父项目统一管理依赖版本
[workspace.dependencies]
tokio = { version = "1.41.0", features = ["full"] }    # 统一到最新版本
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
slint = "1.15.0"

clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.93"
thiserror = "2.0.3"

rand = "0.10.0"      # 统一到 0.9
indicatif = "0.18.4" # 统一到 0.18

ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17.2"
tokenizers = { version = "0.21.4", default-features = false, features = [
    "onig",
] } # 同步到 0.21.4 避免重复
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
imageproc = "0.26.0"
ab_glyph = "0.2"

toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18" }
tracing-indicatif = "0.3.14"
tracing-chrome = "0.7.2"
tracing-test = "0.2.6"
tracing-tracy = "0.11.4"

candle-core = { version = "0.9.2" }
candle-nn = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }

regex = "1.11.1"
#mistralrs = {version = "0.7.1-alpha.1" }

reqwest = "0.13.2"   # 统一到 0.13
once_cell = "1.20.2"
epub = "2.1.5"

usearch = "2.24.0"

fastembed = { version = "5.12.1", features = ["qwen3"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
glob = "0.3.3"
hayro = "0.5.0"
async-stream = "0.3.6"
futures-util = "0.3.32"
futures = "0.3.32"

imara-diff = "0.2.0"
jieba-rs = "0.8.1"
hf-hub = "0.5.0"
itertools = "0.14.0"
measureme = "12.0.3"
eyre = "0.6.12"
rayon = "1.10.0"
parakeet-rs = { version = "0.3.3", features = ["sortformer"] }
symphonia = "0.5.5"
byteorder = "1.5.0"
rubato = "0.16.2"
rustfft = "6.4.1"
num-complex = "0.4.6"

log = "0.4"
num-traits = "0.2.15"
safetensors = "0.7.0"
web-time = "=1.1.0"
tempfile = "3.26.0"
strum_macros = "0.28.0"
# vibevoice = { version = "0.1.0" }
base64 = "0.22"
#whisper-rs = "0.15.1"
async-openai = { version = "0.34.0", features = ["chat-completion"] }
minijinja = "2.17.1"
usls = { version = "=0.2.0-alpha.3", features = ["vision"] }
chrono = "0.4"
utoipa = "5"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
dirs = "6.0.0"
rfd = "0.17.2"
rodio = "0.22.2"
hound = "3.5"
lazy_static = "1.4"

chromiumoxide = { version = "0.9.1" }
num_cpus = "1.16.0"
test-log = "0.2.19"
similar = "3.0.0"
knf-rs-sys = "0.3.2"
ureq = { version = "3.2.0" }
opusic-sys = { version = "0.6.0" }
chinese-number = "0.7.8"

# 3. 统一管理包信息（可选，Rust 1.64+ 支持）
[workspace.package]
version = "0.0.3"
edition = "2021"
authors = ["Your Name <email@example.com>"]
license = "MIT"

[patch.crates-io]
# 强制统一 tokenizers 版本
tokenizers = { git = "https://github.com/huggingface/tokenizers", tag = "v0.21.4" }

candle-core = { path = "../../github.com/candle/candle-core" }
candle-nn = { path = "../../github.com/candle/candle-nn" }
candle-transformers = { path = "../../github.com/candle/candle-transformers" }
candle-metal-kernels = { path = "../../github.com/candle/candle-metal-kernels" }

#candle-examples = { git = "https://github.com/tardigrade-dot/candle.git", version = "0.9.2", rev = "468fe66" }
#candle-onnx = { git = "https://github.com/tardigrade-dot/candle.git", version = "0.9.2", rev = "468fe66" }

#mistralrs = {git = "https://github.com/EricLBuehler/mistral.rs", version = "0.7.1-alpha.1", rev = "2a10942" }

[profile.release]
opt-level = "z"   # 优化代码体积 (也可选 "s")
lto = true        # 启用全量链路优化 (Link Time Optimization)
codegen-units = 1 # 减少编译单元，增加优化空间
panic = "abort"   # 发生 panic 时直接退出，减少 unwind 栈回溯代码体积
strip = true      # 自动移除符号信息 (symbols)
debug = false     # 移除调试信息

# [workspace.lints.clippy]
# # Enable pedantic lints for stricter code quality
# # Priority -1 so individual lint settings override
# pedantic = { level = "warn", priority = -1 }

# # Pedantic overrides - these are too noisy or don't fit this codebase
# missing_errors_doc = "allow"        # Requires extensive documentation work
# missing_panics_doc = "allow"        # Requires extensive documentation work
# must_use_candidate = "allow"        # Very noisy, too subjective
# doc_markdown = "allow"              # Backticks in docs - low value for effort
# similar_names = "allow"             # Often false positives
# too_many_lines = "allow"            # Subjective function length
# module_name_repetitions = "allow"   # FooModule::Foo patterns are common and fine
# struct_excessive_bools = "allow"    # Sometimes structs legitimately need multiple bools
# fn_params_excessive_bools = "allow" # Sometimes functions legitimately need multiple bools
# items_after_statements = "allow"    # Style preference, not harmful
# uninlined_format_args = "allow"     # format!("{}", x) vs format!("{x}") is minor
# return_self_not_must_use = "allow"  # Builder pattern returns
# # Cast lints - many false positives in contexts where values are known to be in range
# cast_possible_truncation = "allow"
# cast_sign_loss = "allow"
# cast_precision_loss = "allow"
# cast_possible_wrap = "allow"
# # Note: cast_lossless is NOT allowed - prefer From::from() for clarity
# # Default::default() vs TypeName::default() is a style preference
# default_trait_access = "allow"
# # Sometimes separate match arms are clearer even if bodies are identical
# match_same_arms = "allow"
# # Some async functions don't await but are async for API consistency or future use
# unused_async = "allow"
# # let...else is newer syntax, current style is fine
# manual_let_else = "allow"
# # Used underscore bindings are sometimes intentional for documentation
# used_underscore_binding = "allow"
# # &Option<T> vs Option<&T> - sometimes &Option is intentional
# ref_option_ref = "allow"
# ref_option = "allow"
# # Appending format! to String - push_str with format is equivalent
# format_push_string = "allow"
# # Case-sensitive extension comparison is often intentional
# case_sensitive_file_extension_comparisons = "allow"
# # Unnecessary wrapping in Result - sometimes for API consistency
# unnecessary_wraps = "allow"
# # Passing by value when not consumed - often cleaner API design
# needless_pass_by_value = "allow"
# # Small Copy types by reference - often for API consistency
# trivially_copy_pass_by_ref = "allow"
# # Underscore-prefixed bindings - used for documentation or future use
# no_effect_underscore_binding = "allow"
# # Closure vs method reference - closure syntax is clearer: .map(|s| s.to_string())
# redundant_closure_for_method_calls = "allow"

# # Panic safety - deny any operations that could panic
# unwrap_used = "deny"
# expect_used = "deny"
# panic = "deny"
# # Note: indexing_slicing lint is too strict and flags many safe uses
# # Instead, we rely on careful code review and bounds checking

# # Prohibit all allow attributes - no exceptions
# allow_attributes = "deny"

# # Allow large error types - error types need rich context for good UX
# result_large_err = "allow"

# # No debug macros in production code
# dbg_macro = "deny"
# # No incomplete code markers
# todo = "deny"
# unimplemented = "deny"
# # Use tracing instead of println/eprintln in library code
# # CLI crates override this via #![allow(...)] in lib.rs/main.rs
# print_stdout = "deny"
# print_stderr = "deny"
