[package]
# 继承父项目的版本、编辑版本和作者信息
version.workspace = true
edition.workspace = true
authors.workspace = true

name = "aphelios_cli"

[dependencies]
aphelios_core = { path = "../aphelios_core" }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }  # 异步 sleep
serde = { version = "1.0", features = ["derive"] }
slint = { workspace = true }

clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

rand = { workspace = true }
indicatif = { workspace = true }

ort = { workspace = true }
ndarray = { workspace = true }
tokenizers = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }

toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = { workspace = true }

candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

regex = { workspace = true }
mistralrs = { workspace = true }

reqwest = { workspace = true }
once_cell = { workspace = true }
epub = { workspace = true }

qwen_tts = { workspace = true }
usearch = { workspace = true }

fastembed = { workspace = true }
rusqlite = { workspace = true }
glob = { workspace = true }
hayro = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
tracing-test = { workspace = true }
imara-diff = { workspace = true }
jieba-rs = { workspace = true }
#hf-hub = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"


[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


[build]
rustc-wrapper = "sccache"

#[target.x86_64-apple-darwin]
#rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/bin/mold"]


