[package]
name = "aphelios_asr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aphelios_core = { path = "../aphelios_core" }

ort = { workspace = true }
ndarray = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokenizers = { workspace = true }
hound = { workspace = true }
tracing = { workspace = true }
rubato = { workspace = true }
rayon = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }
symphonia = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
knf-rs-sys = { workspace = true }
ureq = { workspace = true }
opusic-sys = { workspace = true }
similar = { workspace = true }
chinese-number = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
test-log = { workspace = true }

[features]
default = ["profiling", "metal"]
profiling = ["aphelios_core/profiling",]
cpu = ["aphelios_core/cpu"]
metal = [
    "aphelios_core/metal",
    #"whisper-rs/metal",
    "ort/coreml",
]
