[package]
name = "aphelios_core"
version = "0.1.0"
edition = "2024"

[dependencies]

# Audio processing dependencies
ndarray = { workspace = true }
hound = "3.5"
lazy_static = "1.4"

serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
slint = { workspace = true }

clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

rand = { workspace = true }
indicatif = { workspace = true }

ort = { workspace = true }
tokenizers = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }

toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = { workspace = true }

candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

regex = { workspace = true }
mistralrs = { workspace = true }

reqwest = { workspace = true }
once_cell = { workspace = true }
epub = { workspace = true }

qwen_tts = { workspace = true }
usearch = { workspace = true }

fastembed = { workspace = true }
rusqlite = { workspace = true }
glob = { workspace = true }
hayro = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
tracing-test = { workspace = true }
imara-diff = { workspace = true }
jieba-rs = { workspace = true }
hf-hub = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
itertools = { workspace = true }
