[package]
name = "aphelios_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

# Audio processing dependencies
ndarray = { workspace = true }
hound = { workspace = true }
lazy_static = { workspace = true }

serde_json = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
slint = { workspace = true }

clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

rand = { workspace = true }
indicatif = { workspace = true }

ort = { workspace = true }
tokenizers = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }

toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-chrome = { workspace = true }

candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

regex = { workspace = true }
#mistralrs = { workspace = true }

reqwest = { workspace = true }
once_cell = { workspace = true }
epub = { workspace = true }

usearch = { workspace = true }

rusqlite = { workspace = true }
glob = { workspace = true }
hayro = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
tracing-test = { workspace = true }
imara-diff = { workspace = true }
jieba-rs = { workspace = true }
hf-hub = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
itertools = { workspace = true }
eyre = { workspace = true }
parakeet-rs = { workspace = true }
symphonia = { workspace = true }
rubato = { workspace = true }
dirs = { workspace = true }

async-openai = { workspace = true, features = ["chat-completion"] }
minijinja = { workspace = true }
usls = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
tracing-appender = { workspace = true }
tracing-tree = { workspace = true }

[features]
default = ["profiling", "metal"]
profiling = []
cpu = []
metal = [
    "candle-core/metal",
    "candle-core/accelerate",
    "candle-nn/metal",
    "candle-nn/accelerate",
    "candle-transformers/metal",
    "candle-transformers/accelerate",
    #"mistralrs/metal",
    "ort/coreml",
    "usls/coreml",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    #"mistralrs/cuda",
    "ort/cuda",
]
