[package]
name = "aphelios_ocr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aphelios_core = { path = "../aphelios_core" }
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
slint = { workspace = true }

clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

rand = { workspace = true }
indicatif = { workspace = true }

ort = { workspace = true }
ndarray = { workspace = true }
tokenizers = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }

toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = { workspace = true }

candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

regex = { workspace = true }

reqwest = { workspace = true }
once_cell = { workspace = true }
epub = { workspace = true }

glob = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
tracing-test = { workspace = true }
imara-diff = { workspace = true }
jieba-rs = { workspace = true }
hf-hub = { workspace = true }
itertools = { workspace = true }
measureme = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = "0.5"
pdfium-render = { version = "0.9.0", features = ["bindings"] }
dirs = { workspace = true }
md5 = { workspace = true }

[features]
profiling = ["aphelios_core/profiling"]
cpu = ["aphelios_core/cpu"]
metal = [
    "candle-core/metal",
    "candle-core/accelerate",
    "candle-nn/metal",
    "candle-nn/accelerate",
    "candle-transformers/metal",
    "candle-transformers/accelerate",
    #"mistralrs/metal",
    "ort/coreml",
    "aphelios_core/metal",
    "aphelios_core/profiling",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    #"mistralrs/cuda",
    "ort/coreml",
    "aphelios_core/cuda",
]
