[package]
name = "aphelios_search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aphelios_ocr = { path = "../aphelios_ocr" }
aphelios_core = { path = "../aphelios_core" }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }  # 异步 sleep
serde = { version = "1.0", features = ["derive"] }
slint = { workspace = true }

clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

rand = { workspace = true }
indicatif = { workspace = true }

ort = { workspace = true }
ndarray = { workspace = true }
tokenizers = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }

toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = { workspace = true }

candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

regex = { workspace = true }
#mistralrs = { workspace = true }

reqwest = { workspace = true }
once_cell = { workspace = true }
epub = { workspace = true }

qwen_tts = { workspace = true }
usearch = { workspace = true }

fastembed = { workspace = true }
rusqlite = { workspace = true }
glob = { workspace = true }
hayro = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
tracing-test = { workspace = true }
imara-diff = { workspace = true }
jieba-rs = { workspace = true }
#hf-hub = { workspace = true }


[features]
metal = [
    "candle-core/metal", 
    "candle-nn/metal", 
    "candle-transformers/metal",
    #"mistralrs/metal",
    "ort/coreml",
    "aphelios_ocr/metal",
    "aphelios_core/metal"
    ]