[package]
name = "aphelios_search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aphelios_ocr = { path = "../aphelios_ocr" }
aphelios_core = { path = "../aphelios_core" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
slint = { workspace = true }

clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

rand = { workspace = true }
indicatif = { workspace = true }

ort = { workspace = true }
ndarray = { workspace = true }
tokenizers = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }

toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = { workspace = true }

candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

regex = { workspace = true }

reqwest = { workspace = true }
once_cell = { workspace = true }
epub = { workspace = true }

usearch = { workspace = true }

rusqlite = { workspace = true }
glob = { workspace = true }
hayro = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
tracing-test = { workspace = true }
imara-diff = { workspace = true }
jieba-rs = { workspace = true }
hf-hub = { workspace = true }
zhconv = "0.4"
lazy_static = { workspace = true }


[dev-dependencies]
tokenizers = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
profiling = []
cpu = ["aphelios_ocr/cpu", "aphelios_core/cpu"]
metal = [
    "ort/coreml",
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "aphelios_ocr/metal",
    "aphelios_core/metal",
]
