[package]
name = "aphelios_slint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aphelios_core = { path = "../aphelios_core" }
aphelios_ocr = { path = "../aphelios_ocr" }
aphelios_asr = { path = "../aphelios_asr" }
aphelios_tts = { path = "../aphelios_tts" }
aphelios_search = { path = "../aphelios_search" }

anyhow = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
slint = { workspace = true, features = ["backend-qt", "renderer-software"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = { workspace = true }
rodio = { workspace = true }
candle-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }

[build-dependencies]
slint-build = "1.15.0"

[package.metadata.slint]
assets = ["assets/**"]

[package.metadata.bundle]
name = "Aphelios"
identifier = "com.aphelios.slint"
icon = ["assets/icon.png"]
version = "0.1.0"
resources = ["assets/**/*"]
category = "Utility"
short_description = "Aphelios AI Assistant"
long_description = """
Aphelios is an AI-powered assistant application built with Rust and Slint.
"""

[package.metadata.bundle.build]
macos = { frameworks = ["AppKit", "Foundation", "CoreGraphics"] }

[[bin]]
name = "aphelios_slint"
path = "src/main.rs"

[features]
profiling = []
metal = [
    "aphelios_ocr/metal",
    "aphelios_ocr/profiling",
    "aphelios_asr/metal",
    "aphelios_tts/metal",
    "aphelios_core/metal",
]
