[package]
name = "aphelios_slint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aphelios_core = { path = "../aphelios_core" }
aphelios_ocr = { path = "../aphelios_ocr" }
aphelios_asr = { path = "../aphelios_asr" }
aphelios_tts = { path = "../aphelios_tts" }
aphelios_search = { path = "../aphelios_search" }

anyhow = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
slint = { workspace = true, features = ["backend-qt", "renderer-software"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = { workspace = true }
rodio = { workspace = true }
candle-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
tray-icon = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[build-dependencies]
slint-build = "1.15.0"

[package.metadata.slint]
assets = ["assets/**"]

[package.metadata.bundle]
version = "0.3.0"
name = "Aphelios"
identifier = "com.aphelios.slint"
icon = ["assets/icon.icns"]
resources = ["assets/**/*"]
category = "Utility"
short_description = "Aphelios AI Assistant"
long_description = """
Aphelios is an AI-powered assistant application built with Rust and Slint.
"""

[package.metadata.bundle.build]
macos = { frameworks = ["AppKit", "Foundation", "CoreGraphics"] }

[[bin]]
name = "aphelios_slint"
path = "src/main.rs"

[features]
default = ["metal", "profiling"]
profiling = [
    "aphelios_ocr/profiling",
    "aphelios_asr/profiling",
    "aphelios_tts/profiling",
    "aphelios_search/profiling",
    "aphelios_core/profiling",
]
metal = [
    "aphelios_search/metal",
    "aphelios_ocr/metal",
    "aphelios_asr/metal",
    "aphelios_tts/metal",
    "aphelios_core/metal",
]
